# pcl-sac-segmentation-comp

./: .bazelrc  .gitignore  000000.pcd.ground.pcd  000001.pcd.ground.pcd  BUILD.bazel  LICENSE  README.md  WORKSPACE  ground_segment_1.ipynb  notebooks.py  py_pcl_seg_lib.cpp
python/: requirements.txt  requirements_lock.txt
