load("@rules_pcl//bzl:pcl.bzl", "pcl_config")
pcl_config()
load("@pybind11_bazel//:build_defs.bzl", "pybind_extension")
load("@py_deps//:requirements.bzl", pip_req="requirement")

pybind_extension(
    name = "py_pcl_seg_lib",
    srcs = ["py_pcl_seg_lib.cpp"],
    deps = [
       "@pcl//:common",
       "@pcl//:io",
       "@pcl//:sample_consensus",
       "@pcl//:segmentation",
    ],
)

py_library(
    name = "py_pcl_seg_lib",
    data = [":py_pcl_seg_lib.so"],
)

py_binary(
    name = "notebooks",
    srcs = ["notebooks.py"],
    data = glob([
        "*.ipynb",
        "*.py",
    ]),
    deps = [
        pip_req("notebook"),
        pip_req("matplotlib"),
        pip_req("open3d"),
        ":py_pcl_seg_lib"
    ],
)
